updated the code for app updates